<resources>
    <string name="app_name">BariatriApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Asystent Bariatryczny</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save_reminder">Zapisz przypomnienie</string>
    <string name="time_to">Ustaw godzine alarmu</string>
    <string name="time_from">Ustaw czas koncowy alarmu</string>

    <string name="menu_home">Ekran Główny</string>
    <string name="menu_gallery">Postępy</string>
    <string name="menu_slideshow">Przypominajki</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_progress">Zapisz postęp</string>
    <string name="change_goal">Zmień cel</string>
    <string name="title_activity_create_reminder">Sign in</string>
    <string name="prompt_email">Nazwa alarmu</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_restaurants">Map</string>
</resources>
