<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="android.beginnerranch.bariatriapp.progress.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="android.beginnerranch.bariatriapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="android.beginnerranch.bariatriapp.reminders.ReminderListFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="android.beginnerranch.bariatriapp.recipes.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="android.beginnerranch.bariatriapp.utils.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="android.beginnerranch.bariatriapp.utils.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/map"
        android:name="android.beginnerranch.bariatriapp.maps.Restaurants"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/exercises"
        android:name="android.beginnerranch.bariatriapp.exercises.ExercisesFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>