<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_save"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".reminders.impl.ReminderActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"

        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:visibility="invisible"
        android:text="@string/save_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="206dp" />

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="329dp"
        android:layout_height="320dp"
        app:layout_constraintBottom_toTopOf="@+id/save_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="259dp"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Set alarm time:" />

                    <Button
                        android:id="@+id/pickTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_to"
                        app:layout_constraintBottom_toTopOf="@+id/save_reminder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@android:id/tabcontent"
                        app:layout_constraintVertical_bias="0.636"
                        tools:layout_conversion_absoluteHeight="48dp"
                        tools:layout_conversion_absoluteWidth="147dp"
                        tools:layout_editor_absoluteX="106dp"
                        tools:layout_editor_absoluteY="437dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Set repeating from:" />

                    <Button
                        android:id="@+id/pickTimeFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_to"
                        app:layout_constraintBottom_toTopOf="@+id/save_reminder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timeDisplay"
                        app:layout_constraintVertical_bias="0.636"
                        tools:layout_conversion_absoluteHeight="48dp"
                        tools:layout_conversion_absoluteWidth="147dp"
                        tools:layout_editor_absoluteX="106dp"
                        tools:layout_editor_absoluteY="437dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="to:" />

                    <Button
                        android:id="@+id/pickTimeTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time_from"
                        app:layout_constraintBottom_toTopOf="@+id/save_reminder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/timeDisplay"
                        app:layout_constraintVertical_bias="0.636"
                        tools:layout_conversion_absoluteHeight="48dp"
                        tools:layout_conversion_absoluteWidth="147dp"
                        tools:layout_editor_absoluteX="106dp"
                        tools:layout_editor_absoluteY="437dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="repeating every minutes" />

                    <NumberPicker
                        android:id="@+id/numberPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</androidx.constraintlayout.widget.ConstraintLayout>